Most Functionality is here Need to finish the last 5 TODOs and comment the project

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
 
         <div class="grid-100">
             <h1>
-                <img src="images/chefbot.svg" height="60px">
+                <a ng-href="/"><img src="images/chefbot.svg" height="60px"></a>
                 <br>
-                My Recipes
+                Mr-AJ's Doomsday Recipes!
             </h1>
         </div>
 
@@ -41,11 +41,10 @@
 <script src="vendor/angular.js"></script>
 <script src="vendor/angular-route.js"></script>
 
-<!-- TODO Add script tags for your JavaScript files here -->
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/recipeController.js"></script>
+<script src="scripts/controllers/recipeDetailController.js"></script>
 <script src="scripts/services/data.js"></script>
-<script src="scripts/directives/recipes.js"></script>
 <script src="scripts/directives/categories.js"></script>
 <script src="scripts/config/route-config.js"></script>
 </body>
