--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
 
 <script src="vendor/angular.js"></script>
 <script src="vendor/angular-route.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-animate.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-aria.js"></script>
 
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/recipeController.js"></script>
