--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
     <div class="grid-container">
 
         <div class="grid-100">
-            <h1>
+            <h1 class="main_title">
                 <a ng-href="/"><img src="images/chefbot.svg" height="60px"></a>
                 <br>
-                Mr-AJ's Doomsday Recipes!
+                Aj's Demo AngularJS app
             </h1>
         </div>
 
